package com.example.bankingapp.domain.model;

public enum Role {
    CUSTOMER,
    MANAGER
}
