package com.example.bankingapp.domain.model;

public enum TransactionType {
    LOCAL,
    FOREX
}
