package com.example.bankingapp.domain.ports.in;

public interface BlockUserUseCase {
    void blockUser(Long userId);
}
